log
Thu 14 Sep 2023 06:47:21 PM UTC: 
 tests:  1|8
total_score: 0/70
a6f36da
Thu 14 Sep 2023 06:59:26 PM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:8: error: statement with no effect [-Werror=unused-value]
   43 |     map->root;
      |     ~~~^~~~~~
treemap.c:44:8: error: statement with no effect [-Werror=unused-value]
   44 |     map->current;
      |     ~~~^~~~~~~~~
treemap.c:42:16: error: unused variable ‘current’ [-Werror=unused-variable]
   42 |     TreeNode * current =NULL;
      |                ^~~~~~~
treemap.c:41:16: error: unused variable ‘rood’ [-Werror=unused-variable]
   41 |     TreeNode * rood =NULL;
      |                ^~~~
cc1: all warnings being treated as errors
Compilation failed
9cb4b19
Thu 14 Sep 2023 06:59:58 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:16: error: unused variable ‘current’ [-Werror=unused-variable]
   42 |     TreeNode * current =NULL;
      |                ^~~~~~~
treemap.c:41:16: error: unused variable ‘root’ [-Werror=unused-variable]
   41 |     TreeNode * root =NULL;
      |                ^~~~
cc1: all warnings being treated as errors
Compilation failed
a11b815
Thu 14 Sep 2023 07:00:35 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:15: error: unused variable ‘current’ [-Werror=unused-variable]
   42 |     TreeMap * current =NULL;
      |               ^~~~~~~
treemap.c:41:15: error: unused variable ‘root’ [-Werror=unused-variable]
   41 |     TreeMap * root =NULL;
      |               ^~~~
cc1: all warnings being treated as errors
Compilation failed
665d6ea
Thu 14 Sep 2023 07:00:51 PM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  1|8
total_score: 0/70
5cc98c7
Thu 14 Sep 2023 07:01:02 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
0752a75
Thu 14 Sep 2023 07:34:24 PM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|0
68b671c
Thu 14 Sep 2023 07:35:04 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
65a378e
Thu 14 Sep 2023 07:35:26 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|6
total_score: 15/70
1b74bc4
